--- a/styles.css
+++ b/styles.css
@@ -527,6 +527,10 @@ nav a {
     align-items: center;
 }
 
+.confirmation {
+    font-family: "Courier New", Courier, monospace;
+}
+
 #checkout-total {
     font-weight: bold;
     font-size: 1.2rem;
